# rogue-gym

./: README.md
act2gif/src/: term_image.rs
core/: Cargo.toml
core/src/: error.rs  input.rs  lib.rs
core/src/dungeon/rogue/: floor.rs  mod.rs
python/: Cargo.toml
python/rogue_gym/envs/: rogue_env.py
python/src/: lib.rs
