[package]
name = "rogue-gym-python"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]

[lib]
name = "rogue_gym_python"
crate-type = ["cdylib"]

[dependencies]
failure = "0.1.3"
ndarray = "0.15.6"
numpy = "0.20.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[dependencies.rect-iter]
version = "0.3.0"
default-features = false

[dependencies.rogue-gym-core]
path = "../core/"
version = "0.1.0"

[target.'cfg(unix)'.dependencies.rogue-gym-devui]
path = "../devui/"
version = "0.1.0"
